--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: node_js
 
 node_js:
   #- '5'
-  - '4.2.4'
+  #- '4.2.4'
+  - '4.3.0'
 
 notifications:
   email:
@@ -33,4 +34,4 @@ deploy:
   password: $CF_PASS
   organization: $CF_ORG
   space: $CF_ENV
-  skip_cleanup: true
+  skip_cleanup: false
