--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "url": "https://github.com/irodgal/visioapp"
   },
   "dependencies": {
+    "angular": "^1.5.5",
+    "angular-local-storage": "^0.2.7",
+    "angular-resource": "^1.5.5",
+    "angular-ui-router": "^0.2.18",
     "body-parser": "^1.15.0",
     "cloudant": "^1.4.1",
     "compression": "^1.6.1",
