--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+cloudant_username=irodgal
+cloudant_password=1Kastilla1
+cloudant_database=prueba
+cloudant_database_test=visio_test
 
+jsonwebtoken_super_secret=castillacomunera
