--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "test": "mocha -R spec",
     "test-karma": "karma start karma.conf.js",
     "test-coverage": "istanbul cover _mocha -- --recursive",
-    "coveralls": "npm run-script test-coverage -- --report lcovonly && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls"
+    "coveralls": "npm run-script test-coverage -- && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "author": "Iván R. Galicia",
   "license": "MIT"
