--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^5.7.0",
     "lodash": "^4.6.1",
     "method-override": "^2.3.5",
+    "nano": "^6.2.0",
     "path": "^0.12.7",
     "pdfkit": "^0.7.2"
   },
