--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular-resource": "^1.5.5",
     "angular-ui-router": "^0.2.18",
     "body-parser": "^1.15.0",
+    "bootstrap": "^3.3.6",
     "cloudant": "^1.4.1",
     "compression": "^1.6.1",
     "dotenv": "^2.0.0",
