--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular": "^1.5.5",
     "angular-local-storage": "^0.2.7",
     "angular-resource": "^1.5.5",
+    "angular-ui-bootstrap": "^1.3.2",
     "angular-ui-router": "^0.2.18",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
