--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "pdfkit": "^0.7.2"
   },
   "devDependencies": {
+    "angular-mocks": "^1.5.5",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.2",
     "karma": "^0.13.22",
+    "karma-coverage": "^1.0.0",
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "mocha": "^2.4.5",
