Configuración karma-chai y test para login

--- a/package.json
+++ b/package.json
@@ -29,18 +29,28 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.5.5",
+    "brfs": "^1.4.3",
+    "browserify": "^13.0.1",
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.2",
     "istanbul-combine": "^0.3.0",
     "karma": "^0.13.22",
+    "karma-browserify": "^5.0.5",
+    "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
     "karma-coverage": "^1.0.0",
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon-chai": "^1.2.0",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.5",
-    "supertest": "^1.2.0"
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0",
+    "supertest": "^1.2.0",
+    "watchify": "^3.7.0"
   },
   "scripts": {
     "start": "node app.js",
