Añadido sass, moustache, uglify

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "browserify": "^13.0.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "clean-css": "^3.4.12",
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.2",
     "istanbul-combine": "^0.3.0",
@@ -46,16 +47,26 @@
     "karma-sinon-chai": "^1.2.0",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
+    "mustache": "^2.2.1",
+    "node-sass": "^3.7.0",
+    "nodemon": "^1.9.2",
     "phantomjs-prebuilt": "^2.1.5",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "supertest": "^1.2.0",
+    "uglify-js": "^1.3.5",
     "watchify": "^3.7.0"
   },
   "scripts": {
     "start": "node app.js",
     "start-debug": "node --debug app.js",
     "debugger": "node-inspector --web-port=18080 app.js",
+    "build-css": "node-sass --include-path scss public/scss/main.scss public/css/main.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
+    "minify-css": "cat ./public/css/*.css | cleancss -o public/dist/visioapp.min.css",
+    "minify-css-win": "type public\\css\\*.css | cleancss -o public/dist/visioapp.min.css",
+    "minify-js": "node bin/minify.js",
+    "build": "node pp.js",
     "test": "mocha -R spec",
     "test-karma": "karma start karma.conf.js",
     "test-coverage": "istanbul cover _mocha -- --recursive",
