build con mustache para construir el index.html para produccion

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ script:
  #  - npm test
 
 after_success:
+  - npm run-scriptbuild-css
+  - npm run-scriptminify-css
+  - npm run-script minify-js
+  - npm run-script build
   - npm run-script istanbul-combine
   - npm run-script coveralls
 
