--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "visioapp",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Aplicación para Visio Oftalmología Veterinaria",
-  "main": "app.js",
+  "main": "./dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/irodgal/visioapp"
@@ -13,26 +13,33 @@
     "angular-resource": "^1.5.5",
     "angular-ui-bootstrap": "^1.3.2",
     "angular-ui-router": "^0.2.18",
-    "body-parser": "^1.15.0",
+    "body-parser": "^1.17.1",
     "bootstrap": "^3.3.6",
-    "cloudant": "^1.4.1",
+    "cloudant": "^1.8.0",
     "compression": "^1.6.1",
-    "dotenv": "^2.0.0",
-    "express": "^4.13.4",
+    "crypto": "0.0.3",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.2",
     "glob": "^7.0.3",
-    "jsonwebtoken": "^5.7.0",
+    "jsonwebtoken": "^7.4.1",
     "lodash": "^4.6.1",
-    "method-override": "^2.3.5",
-    "nano": "^6.2.0",
+    "method-override": "^2.3.8",
+    "nano": "^6.3.0",
+    "nano-promises": "^1.2.0",
     "path": "^0.12.7",
     "pdfkit": "^0.7.2"
   },
   "devDependencies": {
+    "@types/chai": "^3.5.2",
+    "@types/chai-http": "0.0.30",
+    "@types/express": "^4.0.35",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.16",
     "angular-mocks": "^1.5.5",
     "brfs": "^1.4.3",
     "browserify": "^13.0.1",
     "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
+    "chai-http": "^3.0.0",
     "clean-css": "^3.4.12",
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.2",
@@ -45,20 +52,24 @@
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.2.0",
-    "mocha": "^2.4.5",
+    "mocha": "^3.3.0",
     "mocha-lcov-reporter": "^1.2.0",
     "mustache": "^2.2.1",
     "node-sass": "^3.7.0",
     "nodemon": "^1.9.2",
+    "nyc": "^10.3.0",
     "phantomjs-prebuilt": "^2.1.5",
-    "sinon": "^1.17.4",
+    "sinon": "^2.3.2",
     "sinon-chai": "^2.8.0",
+    "source-map-support": "^0.4.15",
     "supertest": "^1.2.0",
+    "ts-node": "^3.0.3",
+    "typescript": "^2.3.2",
     "uglify-js": "^1.3.5",
     "watchify": "^3.7.0"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node ./dist/index.js",
     "start-debug": "node --debug app.js",
     "debugger": "node-inspector --web-port=18080 app.js",
     "build-css": "node-sass --include-path scss public/scss/main.scss public/css/main.css",
@@ -67,11 +78,32 @@
     "minify-css-win": "type public\\css\\*.css | cleancss -o public/dist/visioapp.min.css",
     "minify-js": "node bin/minify.js",
     "build": "node bin/build.js",
-    "test": "mocha -R spec",
+    "test": "echo run 'npm run-script test-server'",
     "test-karma": "karma start karma.conf.js",
     "test-coverage": "istanbul cover _mocha -- --recursive",
+    "test-server": "nyc mocha",
     "istanbul-combine": "istanbul-combine -d ./coverage/combine -r lcov ./coverage/coverage.json ./coverage/karma/report-json/coverage-final.json",
     "coveralls": "cat ./coverage/combine/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+  },
+  "nyc": {
+    "include": [
+      "server/**/*.ts",
+      "server/**/*.tsx"
+    ],
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "json",
+      "html"
+    ],
+    "sourceMap": true,
+    "instrument": true
   },
   "author": "Iván R. Galicia",
   "license": "MIT"
